--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/t4nny/B1nCrypti0n#readme",
   "dependencies": {
     "binary-code": "^1.0.2",
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
